fixed resposiveness and alignment issues on various devices

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -65,7 +65,7 @@
 
     @include desktop {
       flex-direction: row;
-      flex: 1 0 500px;
+      flex: 1 0 550px;
       max-width: 700px;
     }
 
